@@ -127,6 +127,7 @@ Misc:
  - Wii: Stretch now sets pixel-accurate mode size cap
  - Qt: Ensure camera image is valid
  - GB: Improved SGB2 support
+ - Libretro: Reduce rumble callbacks
 
 0.7 beta 1: (2018-09-24)
 - Initial beta for 0.7
